--- a/src/_locales/de/messages.yml
+++ b/src/_locales/de/messages.yml
@@ -6,7 +6,7 @@ extDescription:
   message: Userscript-Unterstützung für Opera.
 extTranslator:
   description: Information of the translator.
-  message: '<a href="http://blog.scrobble.me">Adrian Moerchen</a>'
+  message: '<a href="http://blog.scrobble.me">Adrian Moerchen</a>' & heeytim (http://twitter.com/heeytim)
   touched: false
 msgUpdated:
   description: Message shown when a script is updated/reinstalled.
@@ -149,7 +149,7 @@ labelRelated:
   message: 'Links: '
 anchorSupportPage:
   description: Link to the support page of Violentmonkey.
-  message: ''
+  message: Link zu der Support-Seite von Violentmonkey.
 labelDonate:
   description: Label of link to donate page.
   message: Spenden
@@ -167,7 +167,7 @@ labelTranslator:
   message: 'Übersetzer: '
 anchorTranslator:
   description: Translator shown on about tab.
-  message: '<a href="http://blog.scrobble.me">Adrian Moerchen</a>'
+  message: '<a href="http://blog.scrobble.me">Adrian Moerchen</a>' & http://twitter.com/heeytim
 labelCurrentLang:
   description: Label of current language.
   message: 'Gewählte Sprache: '
@@ -282,7 +282,7 @@ menuScriptEnabled:
   message: Skripte aktiviert
 menuScriptDisabled:
   description: 'Menu item showing the status of Violentmonkey, when disabled.'
-  message: ''
+  message: 'Menüpunkt der den Status von Violentmonkey zeigt, wenn es deaktiviert ist.'
 menuBack:
   description: Menu item to go back to main menu from script commands.
   message: Zurück
